--- a/app/package.json
+++ b/app/package.json
@@ -3,5 +3,7 @@
   "version": "0.0.1",
   "main": "main.js",
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {
+    "leancloud-storage": "^3.7.2"
+  }
 }
